# ironfish

./: .gitignore  README.md  lerna.json  package.json
ironfish/: jest.setup.env.js
ironfish-cli/: package.json
ironfish-cli/src/commands/accounts/: pay.ts
ironfish-node-api/: Cargo.toml  README.md  index.js  ironfish-node-api.d.ts  package.json
ironfish-node-api/src/: lib.rs
ironfish-node-api/src/structs/: errors.rs  mod.rs  note.rs  note_encrypted.rs  spend_proof.rs  transaction.rs  witness.rs
ironfish-rust/: Cargo.toml
ironfish/src/: strategy.test.slow.ts
ironfish/src/account/: accounts.test.slow.ts  accounts.test.ts  accounts.ts
ironfish/src/account/__fixtures__/: accounts.test.ts.fixture
ironfish/src/blockchain/: blockchain.ts
ironfish/src/genesis/: genesis.test.slow.ts  makeGenesisBlock.ts
ironfish/src/merkletree/: hasher.ts  witness.ts
ironfish/src/primitives/: blockheader.ts  note.ts  noteEncrypted.ts  target.test.ts  transaction.ts
ironfish/src/serde/: PartialHeaderSerde.ts
ironfish/src/testUtilities/: fixtures.ts
ironfish/src/workerPool/: job.test.slow.ts  worker.ts
ironfish/src/workerPool/tasks/: createMinersFee.ts  createTransaction.ts  transactionFee.ts  verifyTransaction.ts
