[package]
name = "ironfish-node-api"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironfish_rust= { path = "../ironfish-rust" }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
